--- a/Kapitel_01_bis_09/code/numbers.html
+++ b/Kapitel_01_bis_09/code/numbers.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zahlen</title>
 </head>
+
 <body>
-    Bitte öffnen Sie die "Entwicklertools" bzw. "Werkzeuge für Web-Entwickler" mit <strong>Strg + Shift + I</strong> 
+    Bitte öffnen Sie die "Entwicklertools" bzw. "Werkzeuge für Web-Entwickler" mit <strong>Strg + Shift + I</strong>
     und klicken anschließend auf <strong>Konsole</strong>.
     <script>
         let x = 20;
         let y = 30;
 
         console.log("x hat den Wert " + x);
+        console.log("y hat den Wert " + y);
 
         x = x + 10;
+        y = y - 10;
         console.log("x hat den Wert " + x);
+        console.log("y hat den Wert " + y);
 
         x++;
+        y--;
         console.log("x hat den Wert " + x);
+        console.log("y hat den Wert " + y);
 
         x = x + y;
+        y = y - x;
         console.log("x hat den Wert " + x);
+        console.log("y hat den Wert " + y);
     </script>
 </body>
+
 </html>
