--- a/Kapitel_01_bis_09/code/strings.html
+++ b/Kapitel_01_bis_09/code/strings.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeichenketten</title>
 </head>
+
 <body>
     <script>
         let prename = "Thomas";
         let surname = "Rose";
 
+        let myprename = "Dorothea";
+        let mysurname = "Schwentke";
+
         // surname = surname * 1;
         // surname = surname + 1;
 
-        document.write("Guten Tag, " + prename + " " + surname);
+        document.write("Guten Tag, " + prename + " " + surname + "   \n");
+        document.write("Und auch dir einen guten Tag, " + myprename + " " + mysurname + "!\n");
 
-        console.log( prename.substring( 0, 1 ) + prename.substring( 2, 4 ) );
+        console.log(prename.substring(0, 1) + prename.substring(2, 4));
+        console.log(myprename.substring(0, 4));
     </script>
 </body>
+
 </html>
