Loops and Conditions done!

--- a/Kapitel_01_bis_09/code/conditions.html
+++ b/Kapitel_01_bis_09/code/conditions.html
@@ -42,8 +42,9 @@
             console.log( "a ist größer 0" );
         }
 
+        let username = "username";
         let password = prompt( "Bitte geben Sie das Passwort ein:" );
-        if ( password == "geheim" ) {
+        if ( password == "geheim" && username == "username" ) {
             document.body.innerHTML="";
             document.write( "Dieser Text hier ist geheim.");
         }
