Functions and Arrays done!

--- a/Kapitel_01_bis_09/code/arrays.html
+++ b/Kapitel_01_bis_09/code/arrays.html
@@ -16,7 +16,8 @@
         );
 
         for (let i = 0; i <= 11 ; i = i + 1 ) {
-            console.log(i, months[ i ] );
+            //console.log(i, months[ i ] );
+            console.log(i + 1, months[ i ]);
         }
     </script>
 </body>
