--- a/Kapitel_01_bis_09/code/functions.html
+++ b/Kapitel_01_bis_09/code/functions.html
@@ -14,6 +14,8 @@
         welcome( "Rose", "m" );
         welcome( "Lösch", "w" );
         welcome( "Gregor" );
+        welcome( "Dorothea", "w");
+        welcome();
 
         function welcome( name, salutation = '' ) {
             if( salutation == 'm' ) {
